--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My First GitHub Page</title>
+    <title>My VRChat Groups</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
-    <p>This is my free website!</p>
+    <h1>VRChat Group Directory</h1>
+    <ul>
+      <li>Gang Monkeys – List of group names</li>
+      <li>=niggercom</li>
+      <li>Bias Example</li>
+    </ul>
   </body>
 </html>
